data/monitoring/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - grafana.example.com
      secretName: monitoring-tls
  rules:
    - host: grafana.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 80
